// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Button - test Button Primary - snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(0, 122, 255)",
      "borderRadius": 10,
      "opacity": 1,
      "padding": 10,
      "paddingLeft": 20,
      "paddingRight": 20,
      "width": "40%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(242, 242, 242)",
        "fontWeight": "bold",
        "textAlign": "center",
        "textTransform": "uppercase",
      }
    }
  >
    Primary
  </Text>
</View>
`;

exports[`Component Button - test Button Secondary - snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderColor": "rgb(28, 28, 30)",
      "borderRadius": 10,
      "borderWidth": 1,
      "opacity": 1,
      "padding": 10,
      "paddingLeft": 20,
      "paddingRight": 20,
      "width": "40%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(28, 28, 30)",
        "fontWeight": "bold",
        "textAlign": "center",
        "textTransform": "uppercase",
      }
    }
  >
    Secondary
  </Text>
</View>
`;
